5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1578_1333.log
== TEST (2019-03-13 01:14:34) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 01:15:06) 
-- CODE:
expressao = 30–3**2+8//3**2*10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30–3**2+8//3**2*10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 01:15:16) 
-- CODE:
expressao = 30–3**2+8//3**2*10
print(expressao);
-- ERROR:
File "XXXX", line 1
    expressao = 30–3**2+8//3**2*10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 01:17:03) 
-- CODE:
expressao = 30-(3)**2+(8//(2)**2)*10
print(expressao);
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 01:17:08) 
-- CODE:
expressao = 30-(3)**2+(8//(2)**2)*10
print(expressao);
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 01:17:14) 
-- CODE:
expressao = 30-(3)**2+(8//(2)**2)*10
print(expressao);
-- EXECUTION TIME:
0.138425
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 01:17:32) 
-- CODE:
expressao = 30-(3)**2+(8//(2)**2*10)
print(expressao);
-- EXECUTION TIME:
0.182548
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 01:17:36) 
-- CODE:
expressao = 30-(3)**2+(8//(2)**2*10)
print(expressao);
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 01:23:17) 
-- CODE:
expressao = 580
print(expressao);
-- OUTPUT:
580
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 01:23:21) 
-- CODE:
expressao = 580
print(expressao);
-- EXECUTION TIME:
0.187595
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
580
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 01:24:01) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao);
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 01:24:23) 
-- CODE:
expressao=30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao);
-- ERROR:
File "XXXX", line 1
    expressao=30 – 3 ** 2 + 8 // 3 ** 2 * 10
                 ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 01:25:15) 
-- CODE:
expressao=30 – 3 ** 2 + 8 // 3 ** 2 * 10;
print(expressao);
-- ERROR:
File "XXXX", line 1
    expressao=30 – 3 ** 2 + 8 // 3 ** 2 * 10;
                 ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 01:25:42) 
-- CODE:
expressao=30 – 3 ** 2 + 8 // 3 ** 2 * 10;
print(expressao);
-- ERROR:
File "XXXX", line 1
    expressao=30 – 3 ** 2 + 8 // 3 ** 2 * 10;
                 ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 01:27:16) 
-- CODE:
expressao=30-3**2+8//3**2*10
print(expressao);
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 01:27:29) 
-- CODE:
expressao=30-3**2+8//3**2*10
print(expressao);
-- EXECUTION TIME:
0.149248
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
